<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_button"
        android:orientation="vertical"
        android:paddingStart="@dimen/add_item_start"
        android:paddingEnd="@dimen/add_item_end"
        android:paddingBottom="@dimen/add_item_padding_bottom">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:textColorHint="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/title_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:textColorHint="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/price_margin_top"
                android:inputType="number"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/price_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:backgroundTint="@null"
        android:enabled="false"
        android:text="@string/add_button_text"
        android:textColor="@color/add_button_color"
        app:icon="@drawable/ic_check_grey_24dp"
        app:iconTint="@color/add_button_color"
        app:rippleColor="@color/add_button_text_color" />

</RelativeLayout>